fix(scroll): enable scrolling inside content area, hide scrollbar

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -11,7 +11,6 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  overflow-y: hidden;
   color: $text-color;
   background-color: $background-color;
 }
